Fixed  XWIKI-1262 Make current cell visible when selected in a table
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk@3600 f329d543-caf0-0310-9063-dda96c69346f

--- a/web/standard/src/main/webapp/skins/albatross/elements.css
+++ b/web/standard/src/main/webapp/skins/albatross/elements.css
@@ -96,8 +96,7 @@ dd {}
 
 /* Section 11: Tables */
 table {
-  border-spacing: 0px;
-  border-collapse: collapse;
+
 }
 caption {
   margin: auto;
